--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "devDependencies": {
     "@prettier/plugin-pug": "^1.13.5",
     "ngrok": "^3.4.0",
+    "node-forge": "^0.10.0",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "1.12.3",
     "prettier": "^2.2.1",
     "pug": "^3.0.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "safer-eval": "^1.3.6",
+    "serialize-to-js": "^3.1.1"
   }
 }
